--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ https://templatemo.com/tm-575-leadership-event
             <section class="destaque">
 
                 <div class="container">
-                    <a href="#">
+                    <a href="#section_4">
                         <div class="row">
                             <div class="col-lg-12 col-12">
                                 <h2 class="mb-4">A sue empresa ajuda a criar um paraíso para as crianças!</h2>
